Coverity analysis defect 168195: Uninitialized pointer read

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • FarewellDaniel - 2025-02-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer read

      Incorrect values could be read from, or even written to, an arbitrary memory location, causing incorrect computations. Reads an uninitialized pointer or its target
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/storage/wiredtiger/wiredtiger_util.cpp:118: UNINIT 168195 Declaring variable "cursor" without initializer.

            Assignee:
            Aaron Balsara
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: