SERVER-99885 Initialize ptr for coverity (#31885)

GitOrigin-RevId: 1838aeb44d09566cfcc94e7a63349ae528f9a7a3